page admin tabel done, proses acc/delete error

--- a/admin/tables.html
+++ b/admin/tables.html
@@ -170,7 +170,7 @@
                                                 <th>CSS grade</th>
                                             </tr>
                                         </thead>
-                                        <tbody>
+                                        <body>
                                             <tr class="odd gradeX">
                                                 <td>Trident</td>
                                                 <td>Internet Explorer 4.0</td>
@@ -571,7 +571,7 @@
                                                 <td class="center">-</td>
                                                 <td class="center">U</td>
                                             </tr>
-                                        </tbody>
+                                        </body>
                                     </table>
                                 </div>
                                 <!-- /.table-responsive -->
